--- a/views/compare.html
+++ b/views/compare.html
@@ -61,9 +61,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-2">비교 히스토리</div>
-            <div class="col-md-1">1</div>
-            <div class="col-md-7">몇년 몇월 몇일</div>
+            <div class="col-md-12">비교페이지</div>
         </div>
         <br />
         <div class="row">
@@ -183,5 +181,6 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
