--- a/views/main.html
+++ b/views/main.html
@@ -57,60 +57,41 @@
                 </ul>
             </div>
         </div>
-        <!-- 상단 쿼리문
-        <div class="container">
-            <div>우리는 </div>
-            <a href="#">가평</a>
-            <div>으로 </div>
-            <a href="#">17</a>
-            <div>명이서 엠티간다!!</div>
-        </div>
-            -->
     </div>
 
     <div class="container" role="main">
-        <div class="row">
-            <div class="col-md-12"><h1>펜션명</h1></div>
-        </div>
-        <div class="row">
-            <!-- 좌측 사진 섹션 -->
-            <div class="col-md-7">
-                사진섹션
-                <div class="row">
-                    <div class="col-md-12"><img src="" alt="큰 사진" /></div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3"><img src="" alt="작은 사진1" /></div>
-                    <div class="col-md-3"><img src="" alt="작은 사진2" /></div>
-                    <div class="col-md-3"><img src="" alt="작은 사진3" /></div>
-                    <div class="col-md-3"><img src="" alt="작은 사진4" /></div>
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-md-12"><h2>우리는</h2></div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="btn-group">
+                        <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">어디<span class="caret"></span></button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">대성리</a></li>
+                            <li><a href="#">청평</a></li>
+                            <li><a href="#">가평</a></li>
+                        </ul>
+                    </div>
+                    <h2>으로</h2>
                 </div>
             </div>
-            <!-- 우측 지도 섹션 -->
-            <div class="col-md-5">
-                지도섹션
-                <div class="row">
-                    <div class="col-md-12">주소</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">지도</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">세부사항들</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-5"></div>
-                    <div class="col-md-7">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default">비교하기</button>
-                            <button type="button" class="btn btn-default">공유하기</button>
-                            <button type="button" class="btn btn-default">견적내기</button>
-                        </div>
-                    </div>
+            <div class="row">
+                <div class="col-md-12"><input type="text" /><h2>명이</h2></div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">calender <h2>일에</h2></div>
+            </div>
+            <div class="row">
+                <div class="col-md-12"><h2>엠티간다!!</h2></div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="button" class="btn btn-lg btn-info">&nbsp; &nbsp;엠티를 부탁해!&nbsp; &nbsp;</button>
                 </div>
             </div>
         </div>
     </div>
-
 </body>
 </html>
