--- a/views/members_mypage_ver2.html
+++ b/views/members_mypage_ver2.html
@@ -68,49 +68,41 @@
             -->
     </div>
 
-    <div class="container" role="main">
+    <!-- 내 정보, 최근 본 방 부분 -->
+    <div class="container">
         <div class="row">
-            <div class="col-md-12"><h1>펜션명</h1></div>
+            <div class="col-md-12"><h1>마이페이지</h1></div>
         </div>
+        <br />
+        <br />
         <div class="row">
-            <!-- 좌측 사진 섹션 -->
-            <div class="col-md-7">
-                사진섹션
-                <div class="row">
-                    <div class="col-md-12"><img src="" alt="큰 사진" /></div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3"><img src="" alt="작은 사진1" /></div>
-                    <div class="col-md-3"><img src="" alt="작은 사진2" /></div>
-                    <div class="col-md-3"><img src="" alt="작은 사진3" /></div>
-                    <div class="col-md-3"><img src="" alt="작은 사진4" /></div>
-                </div>
+            <!-- 마이페이지 카드 -->
+            <div class="col-md-2">
+                마이 페이지
+                <div class="row"></div>
             </div>
-            <!-- 우측 지도 섹션 -->
-            <div class="col-md-5">
-                지도섹션
-                <div class="row">
-                    <div class="col-md-12">주소</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">지도</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">세부사항들</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-5"></div>
-                    <div class="col-md-7">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default">비교하기</button>
-                            <button type="button" class="btn btn-default">공유하기</button>
-                            <button type="button" class="btn btn-default">견적내기</button>
-                        </div>
-                    </div>
-                </div>
+            <!-- 최근 본 방 카드 -->
+            <div class="col-md-2">
+                최근 본 방
+                <div class="row"></div>
             </div>
+            <!-- 비교 히스토리 카드 -->
+            <div class="col-md-2">
+                비교 히스토리
+                <div class="row"></div>
+            </div>
+            <!-- 견적 히스토리 카드 -->
+            <div class="col-md-2">
+                견적 히스토리
+                <div class="row"></div>
+            </div>
+            <!-- 예약 히스토리 카드 -->
+            <div class="col-md-2">
+                예약 히스토리
+                <div class="row"></div>
+            </div>
+            <div class="col-md-2">2</div>
         </div>
     </div>
-
 </body>
 </html>
