--- a/views/pensions_general_search.html
+++ b/views/pensions_general_search.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <script src="http://code.jquery.com/jquery-1.7.1.js"></script>
+    <img src="img/mtlogo-navbar-header.png" alt="fail to load the image" />
     <script src="../public/javascripts/bootstrap.min.js"></script>
 </head>
 <body>
@@ -57,7 +58,7 @@
                 </ul>
             </div>
         </div>
-        <!-- 상단 쿼리문
+        <!-- 상단 쿼리문 
         <div class="container">
             <div>우리는 </div>
             <a href="#">가평</a>
@@ -70,45 +71,27 @@
 
     <div class="container" role="main">
         <div class="row">
-            <div class="col-md-12"><h1>펜션명</h1></div>
+            <div class="col-md-5"><h1>검색결과</h1></div>
+            <div class="col-md-7">(location, num_of_people)</div>
+        </div>
+        <br />
+        <div class="row">
+            <div class="col-md-12">filtering-box</div>
         </div>
         <div class="row">
-            <!-- 좌측 사진 섹션 -->
-            <div class="col-md-7">
-                사진섹션
-                <div class="row">
-                    <div class="col-md-12"><img src="" alt="큰 사진" /></div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3"><img src="" alt="작은 사진1" /></div>
-                    <div class="col-md-3"><img src="" alt="작은 사진2" /></div>
-                    <div class="col-md-3"><img src="" alt="작은 사진3" /></div>
-                    <div class="col-md-3"><img src="" alt="작은 사진4" /></div>
-                </div>
-            </div>
-            <!-- 우측 지도 섹션 -->
-            <div class="col-md-5">
-                지도섹션
-                <div class="row">
-                    <div class="col-md-12">주소</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">지도</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">세부사항들</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-5"></div>
-                    <div class="col-md-7">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default">비교하기</button>
-                            <button type="button" class="btn btn-default">공유하기</button>
-                            <button type="button" class="btn btn-default">견적내기</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="col-md-4">숙소 1</div>
+            <div class="col-md-4">숙소 2</div>
+            <div class="col-md-4">숙소 3</div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">숙소 4</div>
+            <div class="col-md-4">숙소 5</div>
+            <div class="col-md-4">숙소 6</div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">숙소 7</div>
+            <div class="col-md-4">숙소 8</div>
+            <div class="col-md-4">숙소 9</div>
         </div>
     </div>
 
