--- a/views/main.jade
+++ b/views/main.jade
@@ -1,80 +1,78 @@
-!!! 5
+doctype html
 
 html(lang='en' xmlns='http://www.w3.org/1999/xhtml')
-	head
-		meta(charset='utf-8' name='viewport' content='width=device-width, initial-scale=1.0')
-		title ¿¥Æ¼¸¦ ºÎÅ¹ÇØ
-		link(rel='stylesheet' href='../public/css/bootstrap.min.css')
-		link(rel='stylesheet' href='../public/css/bootstrap-theme.min.css')
-		link(rel='stylesheet' href='../public/css/theme.css')
-		meta(name='viewport' content='width=device-width, initial-scale=1.0')
-		link(rel='stylesheet' href='css/bootstrap-responsive.min.css')
-		script(src='http://code.jquery.com/jquery-1.7.1.js')
-		script(src='../public/javascripts/bootstrap.min.js')
+   head
+      meta(charset='utf-8' name='viewport' content='width=device-width, initial-scale=1.0')
+      title ì— í‹°ë¥¼ ë¶€íƒí•´
+      link(rel='stylesheet' href='css/bootstrap.min.css')
+      link(rel='stylesheet' href='css/bootstrap-theme.min.css')
+      link(rel='stylesheet' href='css/theme.css')
+      meta(name='viewport' content='width=device-width, initial-scale=1.0')
+      link(rel='stylesheet' href='css/bootstrap-responsive.min.css')
+      script(src='http://code.jquery.com/jquery-1.7.1.js')
+      script(src='javascripts/bootstrap.min.js')
 
-	body
-		div.navbar.navbar-default.navbar-fixed-top(role='navigation')
-			div.container
-				div.navbar-header
-					button.navbar-toggle.collapsed(type='button' data-toggle='collapse' data-target='nav-collapse')
-						span.sr-only Toggle navigation
-						span.icon-bar
-						span.icon-bar
-						span.icon-bar
-					a.navbar-brand(href='#')
-						img(src='../public/img/mtlogo-navbar-header.png' alt='fail to load the image')
-				
-				div.navbar-collapse.collapse
-					ul.nav.navbar-nav.navbar-right
-						li
-							a(href='#')
-								img(src='../public/img/search.png' alt='fail to load the image')
-							sub °Ë»ö
-						li.divider-vertical
-						li
-							a(href='#')
-								img(src='../public/img/compare.png' alt='fail to load the image')
-							sub ºñ±³ ÆäÀÌÁö
-						li.divider-vertical
-						li
-							a(href='#')
-								img(src='../public/img/mypage.png' alt='fail to load the image')
-							sub ¸¶ÀÌ ÆäÀÌÁö
-						li.divider-vertical
-						li
-							a(href='#')
-								img(src='../public/img/logout.png' alt='fail to load the image')
-							sub ·Î±×¾Æ¿ô
-				
-		div.container(role='main')
-			div.jumbotron
-				div.row
-					div.col-md-12
-						h2 ¿ì¸®´Â
-				div.row
-					div.col-md-12
-						div.btn-group
-							button.btn.btn-default.dropdown-toggle(type='button' data-toggle='dropdown')¾îµğ
-								span.caret
-							ul.dropdown-menu(role='menu')
-								li
-									a(href='#')´ë¼º¸®
-								li	
-									a(href='#')Ã»Æò
-								li
-									a(href='#')°¡Æò
-						h2 À¸·Î
-				div.row
-					div.col-md-12
-						input(type='text')
-							h2 ¸íÀÌ
-				div.row
-					div.col-md-12 calender 
-						h2 ÀÏ¿¡
-				div.row
-					div.col-md-12'
-						h2 ¿¥Æ¼°£´Ù!!
-				div.row
-					div.col-md-12'
-						button.btn btn-lg.btn-info(type='button')&nbsp; &nbsp;¿¥Æ¼¸¦ ºÎÅ¹ÇØ!&nbsp; &nbsp;
-				
+   body
+      div.navbar.navbar-default.navbar-fixed-top(role='navigation')
+         div.container
+            div.navbar-header
+               button.navbar-toggle.collapsed(type='button' data-toggle='collapse' data-target='nav-collapse')
+                  span.sr-only Toggle navigation
+                  span.icon-bar
+                  span.icon-bar
+                  span.icon-bar
+               a.navbar-brand(href='#')
+                  img(src='img/mtlogo-navbar-header.png' alt='fail to load the image')
+            
+            div.navbar-collapse.collapse
+               ul.nav.navbar-nav.navbar-right
+                  li
+                     a(href='#')
+                        img(src='img/search.png' alt='fail to load the image')
+                        sub ê²€ìƒ‰
+                  li.divider-vertical
+                  li
+                     a(href='#')
+                        img(src='img/compare.png' alt='fail to load the image')
+                        sub ë¹„êµ í˜ì´ì§€
+                  li.divider-vertical
+                  li
+                     a(href='#')
+                        img(src='img/mypage.png' alt='fail to load the image')
+                        sub ë§ˆì´ í˜ì´ì§€
+                  li.divider-vertical
+                  li
+                     a(href='#')
+                        sub ë¡œê·¸ì•„ì›ƒ
+            
+      div.container(role='main')
+         div.jumbotron
+            div.row
+               div.col-md-12
+                  h2 ìš°ë¦¬ëŠ”
+            div.row
+               div.col-md-12
+                  div.btn-group
+                     button.btn.btn-default.dropdown-toggle(type='button' data-toggle='dropdown')ì–´ë””
+                        span.caret
+                     ul.dropdown-menu(role='menu')
+                        li
+                           a(href='#')ëŒ€ì„±ë¦¬
+                        li   
+                           a(href='#')ì²­í‰
+                        li
+                           a(href='#')ê°€í‰
+                  h2 ìœ¼ë¡œ
+            div.row
+               div.col-md-12
+                  input(type='text')
+                  h2 ëª…ì´
+            div.row
+               div.col-md-12 calender 
+                  h2 ì¼ì—
+            div.row
+               div.col-md-12
+                  h2 ì— í‹°ê°„ë‹¤!!
+            div.row
+               div.col-md-12
+                  button.btn.btn-lg.btn-info(type='button')&nbsp; &nbsp;ì— í‹°ë¥¼ ë¶€íƒí•´!&nbsp; &nbsp;
