--- a/views/compare.jade
+++ b/views/compare.jade
@@ -4,9 +4,9 @@ html(lang='en' xmlns='http://www.w3.org/1999/xhtml')
   head
     meta(charset='utf-8', name='viewport', content='width=device-width, initial-scale=1.0')
     title 엠티를 부탁해
-    link(rel='stylesheet', href='../public/css/bootstrap.min.css')
-    link(rel='stylesheet', href='../public/css/bootstrap-theme.min.css')
-    link(rel='stylesheet', href='../public/css/theme.css')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/css/theme.css')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='css/bootstrap-responsive.min.css')
     script(src='http://code.jquery.com/jquery-1.7.1.js')
@@ -20,22 +20,22 @@ html(lang='en' xmlns='http://www.w3.org/1999/xhtml')
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href='#')
-            img(src='../public/img/mtlogo-navbar-header.png', alt='fail to load the image')
+            img(src='/img/mtlogo-navbar-header.png', alt='fail to load the image')
         div.navbar-collapse.collapse
           ul.nav.navbar-nav.navbar-right
             li
               a(href='#')
-                img(src='../public/img/search.png', alt='fail to load the image')
+                img(src='/img/search.png', alt='fail to load the image')
                 sub 검색
             li.divider-vertical
             li
               a(href='#')
-                img(src='../public/img/compare.png', alt='fail to load the image')
+                img(src='/img/compare.png', alt='fail to load the image')
                 sub 비교 페이지
             li.divider-vertical
             li
               a(href='#')
-                img(src='../public/img/mypage.png', alt='fail to load the image')
+                img(src='/img/mypage.png', alt='fail to load the image')
                 sub 마이 페이지
             li.divider-vertical
             li
