--- a/views/pensions/pensions_search_list_test.jade
+++ b/views/pensions/pensions_search_list_test.jade
@@ -1,10 +1,10 @@
+doctype html
 html
 	head
 
-
-
 	body
-
-
-
-		
+		p !{json}
+		p !{json.result}
+		p ---
+		each val, key in json
+			p #{key} : #{val}
