--- a/views/pensions/pensions_search_list_test.jade
+++ b/views/pensions/pensions_search_list_test.jade
@@ -3,8 +3,8 @@ html
 	head
 
 	body
-		p !{json}
-		p !{json.result}
-		p ---
-		each val, key in json
-			p #{key} : #{val}
+		p result
+		// p !{json.result}
+		//p ---
+		// each val, key in json
+		//	p #{key} : #{val}
