--- a/views/members/members_myPage.jade
+++ b/views/members/members_myPage.jade
@@ -43,7 +43,7 @@ html(lang='en' xmlns='http://www.w3.org/1999/xhtml')
                         sub 마이 페이지
                   li.divider-vertical
                   li
-                     tab#btn-logout 로그아웃
+                     button#btn-logout(type='button') 로그아웃
 
 
       div.container
